--- a/Views/Wedding/New.cshtml
+++ b/Views/Wedding/New.cshtml
@@ -1,7 +1,9 @@
 @{
     ViewData["Title"] = "Dashboard";
 }
-@namespace WeddingBells.Models;
+@using WeddingBells.Models;
+@model Wedding
+
 <div class="container">
     <div class="row">
         <h1>Plan A Wedding</h1>
@@ -14,7 +16,7 @@
 
     <div class="row">
         <div>
-            <form asp-action="Create" asp-controller="Wedding" method="POST">
+        <form asp-action="Create" asp-controller="Wedding" method="POST">
     
     <span asp-validation-for="Bride1"></span>
     <div></div>
@@ -41,6 +43,7 @@
     <div></div>
 
     <input type="Submit" value="They Getting Married!">
+        </form>
         </div>
     </div>
 </div>
